Major change in controller